<resources>
    <string name="app_name">PaymentApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_your_payment_card_details">Please enter your payment card details</string>
    <string name="account_description">Account Description</string>
    <string name="attached_card">Attached card</string>
    <string name="your_card_number">Your card number</string>
    <string name="_16_digits_without_spaces">16 digits, without spaces</string>
    <string name="enter_valid_card_number">Enter valid card number</string>
    <string name="hint_1234567898765432">1234 5678 9876 5432</string>
    <string name="your_name">Your Name</string>
    <string name="as_stated_on_the_card">As stated on the card</string>
    <string name="name_hint">JOHN SMITH</string>
    <string name="card_expiration_date">Card Expiration Date and CVV</string>
    <string name="cvc_code">CVC2/CVV2 Code</string>
    <string name="three_digit_number_started_at_the_back_of_the_card">Three-digit number started at the back of the card</string>
    <string name="_123">123</string>
    <string name="pay">PAY</string>
    <string name="incorrect_card_number">*Incorrect card number</string>
    <string name="please_fill_the_field">*Please fill the field</string>
    <string name="card_expire_date_error_message">*Please select card\'s expiration date</string>
    <string name="please_fill_the_field_correctly">*Please fill the field correctly</string>
    <string name="amount">Amount </string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
</resources>